--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,18 @@
 [tool.poetry]
 name = "rofi-menu"
-version = "0.2.0"
+version = "0.2.1"
 description = "Create rofi menus via python"
 authors = ["miphreal <miphreal@gmail.com>"]
 license = "MIT"
+
+readme = "README.md"
+
+homepage = "https://github.com/miphreal/python-rofi-menu"
+repository = "https://github.com/miphreal/python-rofi-menu"
+documentation = "https://github.com/miphreal/python-rofi-menu"
+
+keywords = ["menu", "rofi", "rofi-mode"]
+
 
 [tool.poetry.dependencies]
 python = "^3.6"
