--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ python = "^3.6"
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
 isort = "^4.3.21"
+pytest = "^6.2.3"
+mypy = "^0.812"
 
 [build-system]
 requires = ["poetry>=0.12"]
