--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,7 +29,8 @@ jobs:
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
         run: poetry install --no-interaction --no-root
 
-      - name: Run tests
+      - name: Run linting
         run: |
           source .venv/bin/activate
           mypy rofi_menu/
+          black --check rofi_menu/
